--- a/Gordan's.css
+++ b/Gordan's.css
@@ -45,7 +45,6 @@ nav ul>li {
 /*Header設定*/
 
 header {
-    height: 600px;
     text-align: center;
     background-color: #72c3ff;
     color: white;
@@ -72,6 +71,7 @@ header .line {
     border: 2px solid white;
     display: inline-block;
     border-radius: 8%;
+    margin-bottom: 10px;
 }
 
 .fa fa-star {
@@ -219,12 +219,12 @@ h2 {
 .btn {
     width: 100px;
     height: 28px;
-    color: black;
-    border: 1.5px solid black;
-    margin: 1px auto;
+    color: white;
+    border: 1.5px solid none;
+    margin: 10px auto;
     border-radius: 8%;
     font-size: 1.3em;
-    background-color: #0076ff
+    background-color: #004a95
 }
 
 
@@ -246,30 +246,30 @@ h2 {
 }
 
 .container-contact .btn-send {
-    height: 50px;
+    height: 40px;
     width: 80px;
     text-align: center;
-    background-color: #18BC9C;
+    background-color: #004a95;
     border-radius: 10%;
     margin: 20px;
 }
 
 .btn-send p {
     color: white;
+    padding-top: 5px;
 }
 
 
 /*Info設定*/
 
 .container-Info {
-    height: 300px;
-    background-color: #2C3E50;
+    background-color: #004a95;
 }
 
 .container-Info .row {
-    width: 70%;
+    width: 90%;
     margin: 0 auto;
-    padding: 50px;
+    padding: 40px;
     text-align: center;
     color: white
 }
@@ -296,12 +296,21 @@ h3 {
     font-size: 1.7em;
 }
 
+.container-Info a {
+    color: white;
+    text-decoration: none
+}
+
+.container-Info a:hover {
+    color: #2d94ff
+}
+
 
 /*Footer設定*/
 
 footer {
     height: 50px;
-    background-color: #233140;
+    background-color: #012e5c;
     text-align: center;
     color: white;
     line-height: 50px;
